Fix Channels docker to generate thumbnails asynchronously

Now the docker basically reuses the strategy used in Overview docker,
so there should be no threading issues/crashes anymore.

BUG:473130


(cherry picked from commit d75c3eff6f861ebffe4667e0d44e525e1a98315d)