plugins/dockers/channeldocker/KisChannelsThumbnailsStrokeStrategy.h
@@ -1,0 +1,24 @@
+#ifndef KISCHANNELSTHUMBNAILSSTROKESTRATEGY_H
+#define KISCHANNELSTHUMBNAILSSTROKESTRATEGY_H
+
+#include <KisImageThumbnailStrokeStrategy.h>
+
+
+class KisChannelsThumbnailsStrokeStrategy : public KisImageThumbnailStrokeStrategyBase
+{
+    Q_OBJECT
+public:
+    using KisImageThumbnailStrokeStrategyBase::KisImageThumbnailStrokeStrategyBase;
+
+protected:
+    void reportThumbnailGenerationCompleted(KisPaintDeviceSP device, const QRect &rect) override;
+
+Q_SIGNALS:
+    //Emitted when thumbnail is updated and overviewImage is fully generated.
+    void thumbnailsUpdated(const QVector<QImage> &channels, const KoColorSpace *cs);
+
+};
+
+Q_DECLARE_METATYPE(QVector<QImage>)
+
+#endif // KISCHANNELSTHUMBNAILSSTROKESTRATEGY_H
