plugins/dockers/channeldocker/channelmodel.h
@@ -13,6 +13,7 @@
 
 #include <kis_canvas2.h>
 #include <kis_types.h>
+#include <kis_signal_auto_connection.h>
 
 class KoColorSpace;
 
@@ -30,28 +31,28 @@ public:
     int columnCount(const QModelIndex& parent = QModelIndex()) const override;
     bool setData(const QModelIndex& index, const QVariant& value, int role = Qt::EditRole) override;
     Qt::ItemFlags flags(const QModelIndex& index) const override;
-    void unsetCanvas( void );
+
+    void setCanvas(KisCanvas2* canvas);
+    void setChannelThumbnails(const QVector<QImage> &channels, const KoColorSpace *cs);
 
     //set maximum size of the thumbnail image. This should be set based on screen resolution, etc.
     void setThumbnailSizeLimit(QSize size);
+    QSize thumbnailSizeLimit() const;
 
 public Q_SLOTS:
-    void slotSetCanvas(KisCanvas2* canvas);
     void slotColorSpaceChanged(const KoColorSpace *colorSpace);
-    void updateData(KisCanvas2 *canvas);
     void rowActivated(const QModelIndex &index);
 
 Q_SIGNALS:
     void channelFlagsChanged();
 
 private:
-    void updateThumbnails();
-
-private:
     QPointer<KisCanvas2> m_canvas;
     QVector<QImage> m_thumbnails;
+
     QSize m_thumbnailSizeLimit;
     int m_oversampleRatio;
+    KisSignalAutoConnectionsStore m_canvasConnections;
     int m_channelCount;
 };
 
